# LogicStateCoverage

./: .gitignore  .gitmodules  README.md  SOURCE_ME  setup.sh
lscov/: .gitignore  .lscov-daemon.c.swp  .stuff.h.swp  .~lock.lsstat.csv#  CMakeLists.txt  Makefile  README.md  config.h  cov-to-fig.py  debug.h  emoji.h  lscov-clang.cc  lscov-daemon.c  lscov-llvm-pass.so.cc  lscov-llvm-rt.a.c  lscov-llvm-rt.o.c  lscov.csv  lsstat.csv  stuff.h
lscov/testbed/: CMakeLists.txt  Makefile  README.md  stuff.h  testbed.cpp  wrapper.cpp
lscov/vault/: aflpp-xmllint-64M.csv  aflpp-xmllint-epfl.csv
paper/: .gitignore  Makefile  main.bib  main.tex  start
paper/images/: repr-grid.py
testbed/small_proj/: Makefile  a.out  main.bc  main.c  main.ll
