PROJECT(LSCovLogicState)
CMAKE_MINIMUM_REQUIRED(VERSION 3.8)

set(CMAKE_CXX_FLAGS_OLD ${CMAKE_CXX_FLAGS})
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS_OLD} -fno-rtti -fpic")

FIND_PACKAGE(LLVM REQUIRED CONFIG)

include(CheckCXXCompilerFlag)

ADD_DEFINITIONS(${LLVM_DEFINITIONS})
INCLUDE_DIRECTORIES(${LLVM_INCLUDE_DIRS})

LIST(APPEND CMAKE_PROGRAM_PATH ${LLVM_ROOT_DIR})

FILE(GLOB TESTBED_SRCS "testbed.cpp")
ADD_LIBRARY(LSCovLogicState SHARED ${TESTBED_SRCS})

FILE(GLOB WRAPPER_SRCS "wrapper.cpp")
ADD_EXECUTABLE(tb-clang ${WRAPPER_SRCS})
TARGET_LINK_LIBRARIES(tb-clang LSCovLogicState ${LLVM_AVAILABLE_LIBS})
ADD_EXECUTABLE(tb-clang++ ${WRAPPER_SRCS})
TARGET_LINK_LIBRARIES(tb-clang++ LSCovLogicState ${LLVM_AVAILABLE_LIBS})

ADD_CUSTOM_TARGET(clang ALL COMMAND ${CMAKE_COMMAND} -E create_symlink
  ${LLVM_TOOLS_BINARY_DIR}/clang ${LSCovLogicState_BINARY_DIR}/clang)
ADD_CUSTOM_TARGET(clang++ ALL COMMAND ${CMAKE_COMMAND} -E create_symlink
  ${LLVM_TOOLS_BINARY_DIR}/clang++ ${LSCovLogicState_BINARY_DIR}/clang++) 
